k8s-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codebase-api-deployment
  labels:
    app: codebase-api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codebase-api
  template:
    metadata:
      labels:
        app: codebase-api
    spec:
      containers:
      - name: codebase-api
        image: nduhiu254/codebase-service:v1.0.4
        ports:
        - containerPort: 8080
