K8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codebase-api-service
spec:
  selector:
    app: codebase-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
